main.css
/* ... */
@media screen and (min-width: 1420px) {
    .selected-list {
        grid-auto-flow: row;
    }
}

@media screen and (max-width: 1250px) {
    .dashboard__list {
        grid-auto-flow: column;
        margin: var(--padding-small) var(--negative-padding-small) 0;
        padding-left: var(--padding-small);
    }

    .arrow-box::after {
        position: static;
        content: '';
        width: 1px;
        height: 1px;
        display: block;
    }

    .dashboard {
        padding-bottom: var(--padding-small);
    }
}

@media screen and (max-width: 974px) {
    .main {
        grid-template-columns: repeat(auto-fit, 100%);
    }

    .list {
        grid-template-rows: auto;
        overflow: scroll;
        margin: 0 var(--negative-padding-big);
        padding-left: var(--padding-big);
    }

    .list::after {
        content: '';
        width: calc(var(--padding-big) - var(--grid-gap));
        height: 1px;
        display: block;
    }

    .paginator-container {
        display: none;
    }
}

@media screen and (max-width: 705px) {
    body {
        padding: 0 var(--padding-small);
    }

    .dashboard--info{
        font-size: var(--text-small);
    }

    .degrees {
        font-size: 24px;
    }

    .text--output {
        font-size: 24px;
    }

    .list {
        margin: 0 var(--negative-padding-small);
        padding-left: var(--padding-small);
    }

    .list::after {
        width: calc(var(--padding-small) - var(--grid-gap));
    }

    .header {
        height: 64px;
        justify-content: space-between;
        padding: 12px 0;
        margin-bottom: 0;
        border: none;
    }

    .header__navigation {
        display: flex;
        flex-direction: row-reverse;
        justify-content: center;
        align-items: center;
    }

    .header-menu__items {
        margin-right: 8px;
    }

    .header-menu__link {
        font-size: var(--text-medium);
    }

    .header-menu__items--hidden {
        display: none;
    }

    .header-menu__icon {
        display: block;
        cursor: pointer;
    }

    .header-menu__item {
        display: block;
        transform: translateX(0);
        transition: transform 1s;
    }

    .header-menu__item:hover {
        transform: translateX(-12px);
    }

    .header-menu__item + .header-menu__item {
        margin-top: 4px;
        margin-left: 0;
    }

    .main-section__title {
        display: none;
    }

    .main-section__head {
        display: block;
    }

    .dashboard-title {
        font-size: var(--text-big);
    }

    .dashboard-subtitle {
        font-size: var(--text-small);
    }

    .with-icon::after {
        width: 18px;
        height: 18px;
    }

    .footer__link {
        margin-right: 16px;
    }

    .controls {
        position: relative;
        z-index: 1;
    }

    .controls-title {
        margin-right: 0;
    }

    .controls::before {
        z-index: 1;
        content: '';
        position: absolute;
        background: url('guide/assets/Icons/Arrow_Right/M-Copy@2x.png') no-repeat;
        width: 6px;
        height: 12px;
        background-size: cover;
        left: 86px;
        top: 10px;
        transform: rotate(-90deg);
        filter: brightness(0);
    }

    .controls__container {
        flex-direction: column;
        overflow: hidden;
        height: 30px;
        transition: transform 1s;
        transform: scale(0.95);
    }

    .controls__container--hidden {
        overflow: visible;
        transition: transform 1s;
        transform: scale(1);
    }

    .main-section__controls {
        align-items: center;
        justify-content: space-between;
    }

    .controls__label--devices {
        background-color: rgb(248, 232, 167);
        padding-right: 30px;
        margin-bottom: 3px;
        margin-right: 0;
    }

    .controls__input--devices:checked + label {
        order: -1;
    }

    .modal-container {
        grid-template-columns: auto;
        grid-gap: var(--grid-gap);
        max-width: 310px;
    }

    .modal {
        padding: 20px;
        overflow: hidden;
    }

    .modal__title {
        font-size: var(--text-big);
        line-height: 21px;
    }

    .modal__data {
        display: none;
    }

    .modal__subtitle {
        font-size: var(--text-small);
        color: var(--text-dark);
    }

    .modal__menu {
        overflow: scroll;
        margin-top: 15px;
        margin-right: -20px;
        margin-left: -20px;
        padding-left: 20px;
        display: flex;
    }

    .modal__menu::after {
        content: '';
        display: block;
        min-width: 20px;
        height: 1px;
    }

    .modal__menu-item {
        margin-bottom: 0;
        margin-right: 10px;
        padding-right: 15px;
        font-weight: normal;
    }

    .modal--range-slider {
        height: 336px;
    }

    .controls__input--range {
        width: 336px;
        position: absolute;
        top: 39%;
        transform: rotate(270deg) translateY(-50%);
    }

    .range__extremes {
        flex-direction: column-reverse;
        top: 12px;
        bottom: 12px;
        left: 53%;
        right: auto;
        transform: translate(-63%, -2%);
    }

    .light-range__extremes {
        left: 50%;
        right: auto;
        transform: translate(-40%, -2%);
    }

    .floor-modal--output {
        margin: 50px 10px;
    }
}
/* ... */

